# Pyphish

./: .env.example  .gitignore  Caddyfile  DNS.txt  README.md  install_bind.sh  pyproject.toml
etc/systemd/system/: pyphish.service
src/app/: bd.sql  models.py  pyphish.py
src/app/routes/: routes.py
src/app/static/: index.css  pycampagne.css  pydash.css  pydetailcampanges.css  pyfacebook.css  pyform.css  pygoogle.css  style.css  style0.css  style1.css
src/app/static/scripts/: pydash.js  pygoogle.js
src/app/templates/: campagnes.html  campagnes_id.html  facebook.html  fakeform.html  index.html  pyconnexion.html  pydashboard.html  pyformulaire.html  pygoogle.html  style.css
