[project]
name = "pyphish"
version = "0.1.0"
description = ""
authors = [
    {name = "bouddha-fr",email = "bouddha.whitehat@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "caddy (>=1.3.2,<2.0.0)",
]

[tool.poetry]
packages = [{include = "app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
